Prøver lige lidt hacks i Makefile.subdir, så addsubmitbox bliver et nyt target

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -63,7 +63,7 @@ test:
 
 ################################################################################
 # her er det der skal laves
-all: start html pakhtml palmpilot pdf eksempelbackup stop
+all: start html pakhtml palmpilot pdf eksempelbackup addsubmitbox stop
 
 
 ################################################################################
@@ -198,6 +198,19 @@ pakhtml.clean:
 
 
 ################################################################################
+# ADDSUBMITBOX
+################################################################################
+.PHONE : addsubmitbox
+addsubmitbox: html.stamp
+if ADD_SUBMITBOX
+	(cd bog && ../../addsubmitbox)
+else !ADD_SUBMITBOX
+	@echo "Du skal vælge --enable_submitbox når du kører configure"
+	@echo "for at få tilføjet submit boks"
+endif !ADD_SUBMITBOX
+
+
+################################################################################
 # Byg HTML-filerne
 ################################################################################
 .PHONY : html
@@ -235,14 +248,6 @@ if HAVE_TIDY
 else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
-if ADD_SUBMITBOX
-	(cd bog && ../../addsubmitbox)
-#	Nogen der ved hvorfor vi laver dette link?
-	(cd bog;rm -f apprevhist.html.php;ln -sf *apprevhist.html.php apprevhist.html.php)
-else !ADD_SUBMITBOX
-#	Nogen der ved hvorfor vi laver dette link?
-	(cd bog;rm -f apprevhist.html;ln -sf *apprevhist.html apprevhist.html)
-endif !ADD_SUBMITBOX
 	touch html.stamp
 	@echo "Done HTML (html)"
 	@echo ""
