pakhtml skal kun udføres når html.stamp er nyere en tar.gz-filen

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -161,7 +161,7 @@ palmpilot.clean:
 if BUILD_PAKHTML
 pakhtml: $(targetshortname)/$(targetname)-html-$(version).tar.gz
 
-$(targetshortname)/$(targetname)-html-$(version).tar.gz: html
+$(targetshortname)/$(targetname)-html-$(version).tar.gz: html.stamp 
 	@echo ".........................................."
 	@echo "Target $(targetshortname):pakhtml"
 	@echo ".........................................."
