--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -230,7 +230,7 @@ html.stamp: $(dep_sgml_filer)
 	mkdir bog
 	db2html -V %stylesheet%=linuxbog.css -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	cp linuxbog.css bog
-	cp bog/$(targetname)-apprevhist.html bog/apprevhist.html
+	cp bog/$(targeshorttname)-apprevhist.html bog/apprevhist.html
 if USE_SOFTLINKS
 	(cd bog && ln -sf ../images/*.png .)
 else !USE_SOFTLINKS
