skal lige wipe bog og $(targetshortname)/ ved clean

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -342,7 +342,7 @@ eksempelbackup.clean:
 .PHONY : clean
 clean:	stikord.sgml.clean version.sgml.clean palmpilot.clean pakhtml.clean html.clean pdf.clean eksempelbackup.clean
 	@echo clean $(targetshortname)
-	rm -rf bog.junk/ dato.sgml *~ .#*[0-9] $(targetname)-dist-*.tar.gz
+	rm -rf bog.junk/ dato.sgml *~ .#*[0-9] bog/ $(targetshortname)/ $(targetname)-dist-*.tar.gz
 
 
 ################################################################################
