addsubmitbox er en fælles fil

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -199,7 +199,7 @@ makeonline:
 	rm -rf bog/
 	cp -R $(targetshortname) bog/
 if ADD_SUBMITBOX
-	(cd bog && ../../addsubmitbox)
+	(cd bog && ../addsubmitbox)
 else !ADD_SUBMITBOX
 	@echo "Du skal vælge --enable_submitbox når du kører configure"
 	@echo "for at få tilføjet submit boks"
