addsubmitbox skal lige flyttes

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -181,7 +181,7 @@ else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
 if ADD_SUBMITBOX
-	(cd bog && ../../addsubmitbox)
+	(cd bog && ../addsubmitbox)
 endif ADD_SUBMITBOX
 	touch html.stamp
 else !BUILD_HTML
