Makefile.alle - Har fjernet linie som generer eller genererer version.sgml i alle $DOCROOT/$BOGNAVN subdirs. Det kan medføre problemer, men den må i hvert fald ikke laves hvis den findes i forvejen. Parallelt med ændring af Makefile.subdir.
Dette løser ikke problemet med at en make kommando altid vil
bygge target i alle-directory'et.  Makefile.alle skal rettes
yderligere.

Bemærk at configure bliver kørt automatisk efter ændring i bygge-
systemet og at det tager tid.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -70,13 +70,21 @@ all: html  pakhtml sgml palmpilot
 
 # Hmm. Jeg har ingen ide om hvad det her laver... Ser ud som om det
 # bare skriver noget ud?
+# dax: Nej! Den ødelægger alle eksisterende versionsfiler
+# version.sgml!
 .PHONY : statusfiles
 statusfiles:
 	@for dir in $(SUBDIRSALLE); do \
 		echo -n "$$dir "; \
-		(cd ../$$dir;grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | tail -n 1 | cut -d' ' -f2 > version.sgml; echo -n "`cat version.sgml`"); \
 		(cd ../$$dir;date +%d/%m-%Y> dato.sgml; echo " (`cat dato.sgml`)"); \
 	done;
+
+# dax-fjernet linie:
+#(cd ../$$dir;grep -A2 "<listitem>" apprevhist.sgml | 
+# head -n 2 | tail -n 1 | cut -d' ' -f2 > version.sgml; 
+# echo -n "`cat version.sgml`"); \
+# 
+# slut på dax-fjernet linie. 
 
 ################################################################################
 # Pak SGML_filerne sammen
