--- a/Makefile.alle
+++ b/Makefile.alle
@@ -25,7 +25,7 @@ targetshortname=$(notdir $(locdirname))
 targetname=linuxbog-$(notdir $(locdirname))
 
 # version
-version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > version.sgml; cat version.sgml)
+version:=$(shell cd ../friheden ; grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > $$OLDPWD/version.sgml; cat version.sgml)
 
 # Base navnet for pakker, mv
 basenavn:=$(targetname)-$(version)
