Makefile.alle Dropper basename eller basenavn til fordel for targetname+type+version.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -122,20 +122,21 @@ endif !BUILD_PALM
 ################################################################################
 # Pak HTML-filer ned
 ################################################################################
+# dax: dropper anvendelse af basenavn, da matrix kræver noget andet.
 if BUILD_PAKHTML
-pakhtml:	$(basenavn)-html.tar.gz $(basenavn)-htmlub.tar.gz $(basenavn)-png.tar.gz $(basenavn)-html.zip 
+pakhtml:	$(targetname)-html-$(version).tar.gz $(targetname)-htmlub-$(version).tar.gz $(targetname)-png-$(version).tar.gz $(targetname)-html-$(version).zip 
 
-$(basenavn)-html.tar.gz :	html
-	tar hczf $(basenavn)-html.tar.gz $(targetshortname)/*
+$(targetname)-html-$(version).tar.gz :	html
+	tar -hczf $(targetname)-html-$(version).tar.gz $(targetshortname)/*
 
-$(basenavn)-htmlub.tar.gz :	html
-	tar hczf $(basenavn)-htmlub.tar.gz $(targetshortname)/*.html $(targetshortname)/*.css
+$(targetname)-htmlub-$(version).tar.gz :	html
+	tar hczf $(targetname)-htmlub-$(version).tar.gz $(targetshortname)/*.html $(targetshortname)/*.css
 
-$(basenavn)-png.tar.gz :	html
-	tar hczf $(basenavn)-png.tar.gz $(targetshortname)/*.png
+$(targetname)-png-$(version).tar.gz :	html
+	tar hczf $(targetname)-png-$(version).tar.gz $(targetshortname)/*.png
 
-$(basenavn)-html.zip :	html
-	zip $(basenavn)-html.zip $(targetshortname)/*
+$(targetname)-html-$(version).zip :	html
+	zip $(targetname)-html-$(version).zip $(targetshortname)/*
 else !BUILD_PAKHTML
 	@echo "Overspringer pakhtml"
 endif !BUILD_PAKHTML
