Makefile.alle  alle/*palm* fil navne konvention også ændret(tilbage forhåbentlig).

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -98,9 +98,10 @@ sgml:
 # Byg Palm Pilot udgaven
 ################################################################################
 # Laver en zip fil, kræver alle/index.html
+# dax: ændrer palmpilot_navn til Schou-Pto konvention
 .PHONY : palmpilot
 if BUILD_PALM
-palmpilot_navn:=$(basenavn).palm.zip
+palmpilot_navn:=$(targetname)-palm-$(version).zip
 palmpilot:	$(palmpilot_navn)
 $(palmpilot_navn):	html
 	@echo ".........................................."
