Makefile.alle: Underlig informativ meddelelse echo $(targetname)/$targetname skal vaere $(targetname)/$(targetname) aner ikke hvorfor.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -153,7 +153,7 @@ html: statusfiles $(targetshortname)
 $(targetshortname): html.stamp
 
 html.stamp: $(dep_sgml_filer) bog.sgml
-	@echo "Target er HTML i" $(targetshortname)/$targetshortname
+	@echo "Target er HTML i" $(targetshortname)/$(targetshortname)
 	rm -rf stikord.sgml magic.sgml bog alle
 	echo '<!ENTITY magic "png">' > magic.sgml
 	collateindex.pl -s Symboler -x -t Stikordsregister -g -i stikord -N -o stikord.sgml
