Omdøbt reglen der bygger kataloget med eksempelfiler.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -222,7 +222,7 @@ endif !ADD_SUBMITBOX
 ################################################################################
 .PHONY : html
 if BUILD_HTML
-html: html.stamp eksempler-sgml
+html: html.stamp eksempler-sgml-HTML
 html.stamp: $(dep_sgml_filer)
 	@echo ".........................................."
 	@echo "Target $(targetshortname):html"
@@ -373,7 +373,7 @@ reallyclean:	clean distclean
 #-----------------------------------------------------------------------------
 #--  Bygger SGML/XML-udgaver af alle filer i eksempler:
 
-eksempler-sgml: eksempler/*
+eksempler-sgml-HTML: eksempler/*
 	mkdir -p eksempler-sgml
 	for fil in eksempler/*; do; perl ../signatur/eksempler/perl2sgml.pl < $${fil} > eksempler-sgml/$$(basename ${fil}); done
 
