--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -375,7 +375,7 @@ reallyclean:	clean distclean
 
 eksempler-sgml-HTML: eksempler/*
 	mkdir -p eksempler-sgml
-	for fil in eksempler/*; do; perl ../signatur/eksempler/perl2sgml.pl < $${fil} > eksempler-sgml/$$(basename ${fil}); done
+	for fil in eksempler/*; do; perl ../signatur/eksempler/perl2sgml.pl < $${fil} > eksempler-sgml/$$(basename $${fil}); done
 
 eksempler-sgml-PDF: eksempler/*
 	mkdir -p PdfBuildDir/eksempler-sgml
