Makefile.alle: For at version.sgml findes men ikke som noget, vores html target er afhængigt af, genereres version.html nu hvis nødvendigt inde i html: target. At der kan bygges op og ryddes op er ganske sikkert! Men nu først se at få den igang igen.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -155,6 +155,7 @@ $(targetshortname): html.stamp
 html.stamp: $(dep_sgml_filer) bog.sgml
 	@echo "Target er HTML i" $(targetshortname)/$(targetshortname)
 	rm -rf stikord.sgml magic.sgml bog alle
+	make version.sgml
 	echo '<!ENTITY magic "png">' > magic.sgml
 	collateindex.pl -s Symboler -x -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o ./bog  bog.sgml
@@ -216,6 +217,7 @@ $(targetname)-$(version).pdf: $(sgmlfiler) bog.2pdf.sgml
 	@echo "Target $(targetshortname):pdf"
 	@echo ".........................................."
 	@echo '<!ENTITY magic "png">' > magic.sgml
+	make version.sgml
 	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	rm -rf PdfBuildDir
 	mkdir PdfBuildDir
