Makefile.subdir: version.sgml bliver lavet uden at være afhængighedsskabende, hvilket er meget vigtigt for selve dependency systemet. Man må ikke have dependencies på nogen som helst auto-genererede filer, men de skal selvfølgelig bare laves, hvis de mangler. Der er vist et par filer mere, for hvilket dette gælder.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -229,6 +229,7 @@ html.stamp: $(dep_sgml_filer)
 	@echo ".........................................."
 	rm -rf $(targetname)-*.html.tar.gz bog/ $(targetshortname)/
 	@echo '<!ENTITY magic "png">' > magic.sgml
+	make version.sgml
 	db2html -V %stylesheet%=linuxbog.css -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	mv bog/ $(targetshortname)
 	cp linuxbog.css $(targetshortname)	
@@ -271,6 +272,7 @@ $(targetname)-$(version).pdf: $(dep_sgml_filer) eksempler-sgml-PDF
 	@echo "Target $(targetshortname):pdf"
 	@echo ".........................................."
 	@echo '<!ENTITY magic "png">' > magic.sgml
+	make version.sgml
 	@echo Opsætter PdfBuildDir
 #	@rm -rf PdfBuildDir stikord.sgml
 	@rm -rf PdfBuildDir
