Makefile.subdir Makefile.alle: Af en eller anden grund virker make version.sgml ikke - måske prøver den en parallel build, fordi tyge har to CPU-er, men i hvert fald er der noget rivende galg. Når jeg indbygger en pause (sleep 2) så går det.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -273,6 +273,7 @@ $(targetname)-$(version).pdf: $(dep_sgml_filer) eksempler-sgml-PDF
 	@echo ".........................................."
 	@echo '<!ENTITY magic "png">' > magic.sgml
 	make version.sgml
+	echo "For some reason we must pause here." ; sleep 2 ; ls -l version.sgml; test -f version.sgml || exit 109
 	@echo Opsætter PdfBuildDir
 #	@rm -rf PdfBuildDir stikord.sgml
 	@rm -rf PdfBuildDir
