Makefile.subdir: Det var nok collateindex som kørte uden version.sgml.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -112,6 +112,7 @@ stikord.sgml:	$(filter-out version.sgml stikord.sgml ,$(dep_sgml_filer))
 	if test ! -e magic.sgml ; then \
 		echo '<!ENTITY magic "png">' > magic.sgml ; \
 	fi
+	make version.sgml
 	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml && \
 	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o StikordBuildDir bog.sgml && \
 	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -o stikord.sgml StikordBuildDir/HTML.index
