Makefile.alle: version-variabelen rettet. Makefilen køres åbenbart også allerførst. Den laver en cat version.sgml som skulle rettes til $$OLDPWD/version.sgml - men det synes jeg at jeg har rettet før.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -25,7 +25,7 @@ targetshortname=$(notdir $(locdirname))
 targetname=linuxbog-$(notdir $(locdirname))
 
 # version
-version:=$(shell cd ../friheden ; grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > $$OLDPWD/version.sgml; cat version.sgml)
+version:=$(shell cd ../friheden ; grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > $$OLDPWD/version.sgml; cat $$OLDPWD/version.sgml)
 
 # Base navnet for pakker, mv
 basenavn:=$(targetname)-$(version)
