Skjuler filer som "make clean" ikke kan finde ud af at fjerne.

--- a/alle/.cvsignore
+++ b/alle/.cvsignore
@@ -1,5 +1,7 @@
 aclocal.m4
+addsubmitbox
 autom4te.cache
+bog.2pdf.sgml
 bogoversigt.sgml
 bootstrap
 config.log
@@ -8,6 +10,7 @@ configure
 configure.ac
 dato.sgml
 install-sh
+linuxbog.css
 linuxbog.spec
 linuxbogurl.sgml
 magic.sgml
@@ -18,5 +21,6 @@ misc
 missing
 mkinstalldirs
 ophavsret.sgml
+palm-faelles
 stikord.sgml
 version.sgml
