--- a/forsker/.cvsignore
+++ b/forsker/.cvsignore
@@ -1,4 +1,5 @@
 aclocal.m4
+addsubmitbox
 autom4te.cache
 bogoversigt.sgml
 bootstrap
@@ -8,6 +9,7 @@ configure
 configure.ac
 dato.sgml
 install-sh
+linuxbog.css
 linuxbog.spec
 linuxbogurl.sgml
 magic.sgml
@@ -18,5 +20,6 @@ misc
 missing
 mkinstalldirs
 ophavsret.sgml
+palm-faelles
 stikord.sgml
 version.sgml
