Rettet fejl i byggesystemet. Nu kan man bruge eksempler fra "eksempler-sgml", der indeholder det samme som "eksempler", men med <, > og & kodet til brug i XML og SGML.

--- a/Makefile.in
+++ b/Makefile.in
@@ -113,7 +113,7 @@ reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make $@ i $$dir" && \
-		cd $$dir && $(MAKE) $@ ; cd .. ;\
+		cd $$dir && $(MAKE) eksempler-sgml-HTML eksempler-sgml-PDF $@ ; cd .. ;\
 	done ;
 
 
