--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -223,8 +223,8 @@ endif !ADD_SUBMITBOX
 ################################################################################
 .PHONY : html
 if BUILD_HTML
-html: html.stamp eksempler-sgml-HTML
-html.stamp: $(dep_sgml_filer)
+html: html.stamp
+html.stamp: $(dep_sgml_filer) eksempler-sgml-HTML
 	@echo ".........................................."
 	@echo "Target $(targetshortname):html"
 	@echo ".........................................."
@@ -378,12 +378,14 @@ reallyclean:	clean distclean
 #-----------------------------------------------------------------------------
 #--  Bygger SGML/XML-udgaver af alle filer i eksempler:
 
+.PHONY : eksempler-sgml-HTML
 eksempler-sgml-HTML: eksempler/*
 	mkdir -p eksempler-sgml
-	for fil in eksempler/*; do; perl ../signatur/eksempler/perl2sgml.pl < $${fil} > eksempler-sgml/`basename $${fil}`; done
+	for fil in eksempler/*; do perl ../faelles-filer/tekst_til_sgml.pl < $${fil} > eksempler-sgml/`basename $${fil}`; done
 
+.PHONY : eksempler-sgml-PDF
 eksempler-sgml-PDF: eksempler/*
 	mkdir -p PdfBuildDir/eksempler-sgml
-	for fil in eksempler/*; do; perl ../signatur/eksempler/perl2sgml.pl < $${fil} > PdfBuildDir/eksempler-sgml/`basename $${fil}`; done
+	for fil in eksempler/*; do perl ../faelles-filer/tekst_til_sgml.pl < $${fil} > PdfBuildDir/eksempler-sgml/`basename $${fil}`; done
 
 #-----------------------------------------------------------------------------
