--- a/applikationer/.cvsignore
+++ b/applikationer/.cvsignore
@@ -1,4 +1,5 @@
 aclocal.m4
+addsubmitbox
 autom4te.cache
 bogoversigt.sgml
 bootstrap
@@ -7,7 +8,9 @@ config.status
 configure
 configure.ac
 dato.sgml
+eksempler-sgml
 install-sh
+linuxbog.css
 linuxbog.spec
 linuxbogurl.sgml
 magic.sgml
@@ -18,5 +21,6 @@ misc
 missing
 mkinstalldirs
 ophavsret.sgml
+palm-faelles
 stikord.sgml
 version.sgml
