Rettet en lille skrivefejl.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -21,7 +21,7 @@ locdirname=$(shell pwd)
 # MBD: Jeg fatter ikke helt det med targetshortname, 
 targetshortname=$(notdir $(locdirname))
 
-# Med linux- foran
+# Med linuxbog- foran
 targetname=linuxbog-$(notdir $(locdirname))
 
 # version
