--- a/Makefile.in
+++ b/Makefile.in
@@ -11,6 +11,8 @@
 SUBDIRS=@SUBDIRS@
 # Om alle bogen skal bygges
 ALLE=@ALLE@
+# Om "samling"-bogen skal bygges
+SAMLING=@SAMLING@
 
 ################################################################################
 #
@@ -31,7 +33,7 @@ default:
 # alligevel hvis Makefile.alle er blevet ændret. Sådan er det bare.
 FAELLES_FILER:=faelles-filer/*.css faelles-filer/*.sgml
 BYGGE_FILER:=linuxbog.spec misc/insertimagesize \
-		configure Makefile.in Makefile.alle \
+		configure Makefile.in Makefile.alle Makefile.samling \
 		bootstrap.subdir Makefile.subdir configure.ac.subdir
 Makefile:	$(FALLES_FILER) $(BYGGE_FILER)
 	./configure @CONFIGUREARGS@
@@ -47,7 +49,7 @@ Makefile:	$(FALLES_FILER) $(BYGGE_FILER)
 configure:
 	echo "Hvad dælen, jeg troede jeg var forældet"
 	exit 1	
-	@for dir in $(SUBDIRS) $(ALLE) ; do \
+	@for dir in $(SUBDIRS) $(ALLE) $(SAMLING); do \
 		echo "*** Kører ./configure i $$dir" && \
 		cd $$dir && ./configure && cd .. || exit ;\
 	done ;
@@ -57,7 +59,7 @@ configure:
 #
 # subdir configure targets
 # Bruges primært af dist target
-$(addsuffix /configure,$(SUBDIRS) $(ALLE)):	$(BYGGE_FILER)
+$(addsuffix /configure,$(SUBDIRS) $(ALLE) $(SAMLING)):	$(BYGGE_FILER)
 	./configure @CONFIGUREARGS@
 
 ################################################################################
@@ -65,29 +67,26 @@ $(addsuffix /configure,$(SUBDIRS) $(ALLE)):	$(BYGGE_FILER)
 # subdir Makefile targets
 # Disse er f.eks. nødvendige når man skal lave noget der kalder make i et
 # underbibliotek.
-$(addsuffix /Makefile,$(SUBDIRS) $(ALLE)):	$(BYGGE_FILER)
+$(addsuffix /Makefile,$(SUBDIRS) $(ALLE) $(SAMLING)):	$(BYGGE_FILER)
 	./configure @CONFIGUREARGS@
-
-
 
 ################################################################################
 #
 # distclean
 # Cleaner i alle subdirs, så det passer til en dist
 distclean:	$(addsuffix /Makefile,$(SUBDIRS))
-	@for dir in $(SUBDIRS) $(ALLE) ; do \
+	@for dir in $(SUBDIRS) $(ALLE) $(SAMLING) ; do \
 		echo "*** Kører make distclean i $$dir" && \
 		cd $$dir && $(MAKE) distclean && cd .. || exit ;\
 	done ;
-
 
 ################################################################################
 #
 # clean
 # cleaner i alle subdirs == tilbage til før bootstrap, stort set.
-clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
+clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE) $(SAMLING))
 	rm -f *.tar.gz *~
-	@for dir in $(SUBDIRS) $(ALLE) ; do \
+	@for dir in $(SUBDIRS) $(ALLE) $(SAMLING) ; do \
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && $(MAKE) $@ ; cd .. ;\
 	done ;
@@ -96,13 +95,12 @@ clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 #
 # reallyclean
 # reallycleaner i alle subdirs == tilbage til før bootstrap
-reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
+reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE) $(SAMLING))
 	rm -f *.tar.gz *~
-	@for dir in $(SUBDIRS) $(ALLE) ; do \
+	@for dir in $(SUBDIRS) $(ALLE) $(SAMLING) ; do \
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && $(MAKE) $@ ; cd .. ;\
 	done ;
-
 
 ################################################################################
 #
@@ -110,8 +108,8 @@ reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 # Makefilen her skal være uptodate, samt alle underbibliotekers Makefile skal 
 # være i orden.
 .PHONY : all html pdf pakhtml palmpilot eksempelbackup
-all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
-	@for dir in $(SUBDIRS) $(ALLE) ; do \
+all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE) $(SAMLING))
+	@for dir in $(SUBDIRS) $(ALLE) $(SAMLING); do \
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && $(MAKE) eksempler-sgml-HTML eksempler-sgml-PDF $@ ; cd .. ;\
 	done ;
